# FastapiTemplate

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: deploy.yml  lint.yml
src/: settings.py
src/auth/: auth.py
src/database/: connection.py  models.py
src/routers/: checks.py  users.py
src/schemas/: users.py
src/services/: users.py
