[project]
name = "fastapitemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi[standard]==0.115.5",
    "passlib[bcrypt]==1.7.4",
    "pre-commit==4.2.0",
    "pydantic==2.10.1",
    "pydantic-settings==2.8.1",
    "pyjwt[crypto]==2.10.1",
    "ruff==0.11.0",
    "sqlalchemy==2.0.39",
]
