[project]
name = "fastapi_template"
version = "1.0.0"
description = "FastAPI template"
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.14",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]
